--- a/packages/ExternalStorageProvider/AndroidManifest.xml
+++ b/packages/ExternalStorageProvider/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
+    <!-- ======rk code====== -->
+    <uses-permission android:name="android.permission.MANAGE_USERS" />
+    <!-- =================== -->
+
     <application android:label="@string/app_label">
         <provider
             android:name=".ExternalStorageProvider"
